# commit-msg-generator

./: README.md  pyproject.toml
commit_msg_generator/: __init__.py  cli.py  config.py  generator.py
